16 Jul 2009 couderc
 * completed management of dependencies between checks into generated
   pmkfile.
 * fixed missing dependency when generated check already exists.

13 Jul 2009 couderc
 * first part of modifications to handle check dependencies.

11 Mar 2009 couderc
 * unbreak library detection.

24 May 2008 coudercd
 * fixed pmkscan to check linker type values in scanfile (noticed by
   Magnus Holmgren).

11 Mar 2008 coudercd
 * fix recording of library path broken by previous commit.

10 Apr 2008 coudercd
 * use collected CFLAGS and LDFLAGS during checks (fix problems with
   hierarchical includes or libraries).

09 Apr 2008 coudercd
 * permit user data file for pmkscan.

24 Mar 2008 coudercd
 * better use of hash_get_processed() in codebuild.
 * fixed pkgconfig stuff in cases where dependencies can be missing.
 * removed use of (broken) variable substitution in pmk.conf.
 * added pkgconfig lib path detection.

18 Jul 2007 coudercd
 * moved hash_t to hash.c and done some cleaning.
 * adding dynary.c, dynary.h, dynary_tools.c and dynary_tools.h for
   further use (to replace basic dynarrays).

01 Jun 2007 coudercd
 * added support of LIBS into generated makefile templates from pmkscan.
 * added detection of sete*id() functions.

25 May 2007 coudercd
 * fixed use of LIBS.
 * pmk now check for for ~/.pmk/pmk.conf and if not exists for 
   SYSCONFDIR/pmk/pmk.conf.

23 May 2007 coudercd
 * fixed function detection in library check.
 * added math library check in pmkfile.
 * updated data/pmkscan.dat database.

12 May 2007 coudercd
 * updated pmkfile and scanfile.
 * added missing tag generation for pmk library check.

07 May 2007 coudercd
 * put linker flags like library path and/or name after objects to fix
   link resolution on platforms where order is important.
 * build library targets first.
 * update scanfile.5 manual page with DEFINE_BIN.

04 May 2007 coudercd
 * added DEFINE_BIN to allow specification of a binary name by giving